examples/generic/invalid/01_missing_fields.sdp
v=0
o=- 1000 1 IN IP4 127.0.0.1
